v0.2.0/_sources/api/tg/methods.rst.txt
.. _banana-api-tg-methods:

Telegram API Methods
====================

The page contains all information about telegram API methods

File
   ``#include <banana/api.hpp>``

.. toctree::
   :name: api_tg_methods

   add_sticker_to_set <methods/add_sticker_to_set>
   answer_callback_query <methods/answer_callback_query>
   answer_inline_query <methods/answer_inline_query>
   answer_pre_checkout_query <methods/answer_pre_checkout_query>
   answer_shipping_query <methods/answer_shipping_query>
   ban_chat_member <methods/ban_chat_member>
   close <methods/close>
   copy_message <methods/copy_message>
   create_chat_invite_link <methods/create_chat_invite_link>
   create_new_sticker_set <methods/create_new_sticker_set>
   delete_chat_photo <methods/delete_chat_photo>
   delete_chat_sticker_set <methods/delete_chat_sticker_set>
   delete_message <methods/delete_message>
   delete_my_commands <methods/delete_my_commands>
   delete_sticker_from_set <methods/delete_sticker_from_set>
   delete_webhook <methods/delete_webhook>
   edit_chat_invite_link <methods/edit_chat_invite_link>
   edit_message_caption <methods/edit_message_caption>
   edit_message_live_location <methods/edit_message_live_location>
   edit_message_media <methods/edit_message_media>
   edit_message_reply_markup <methods/edit_message_reply_markup>
   edit_message_text <methods/edit_message_text>
   export_chat_invite_link <methods/export_chat_invite_link>
   forward_message <methods/forward_message>
   get_chat <methods/get_chat>
   get_chat_administrators <methods/get_chat_administrators>
   get_chat_member <methods/get_chat_member>
   get_chat_member_count <methods/get_chat_member_count>
   get_file <methods/get_file>
   get_game_high_scores <methods/get_game_high_scores>
   get_me <methods/get_me>
   get_my_commands <methods/get_my_commands>
   get_sticker_set <methods/get_sticker_set>
   get_updates <methods/get_updates>
   get_user_profile_photos <methods/get_user_profile_photos>
   get_webhook_info <methods/get_webhook_info>
   leave_chat <methods/leave_chat>
   log_out <methods/log_out>
   pin_chat_message <methods/pin_chat_message>
   promote_chat_member <methods/promote_chat_member>
   restrict_chat_member <methods/restrict_chat_member>
   revoke_chat_invite_link <methods/revoke_chat_invite_link>
   send_animation <methods/send_animation>
   send_audio <methods/send_audio>
   send_chat_action <methods/send_chat_action>
   send_contact <methods/send_contact>
   send_dice <methods/send_dice>
   send_document <methods/send_document>
   send_game <methods/send_game>
   send_invoice <methods/send_invoice>
   send_location <methods/send_location>
   send_media_group <methods/send_media_group>
   send_message <methods/send_message>
   send_photo <methods/send_photo>
   send_poll <methods/send_poll>
   send_sticker <methods/send_sticker>
   send_venue <methods/send_venue>
   send_video <methods/send_video>
   send_video_note <methods/send_video_note>
   send_voice <methods/send_voice>
   set_chat_administrator_custom_title <methods/set_chat_administrator_custom_title>
   set_chat_description <methods/set_chat_description>
   set_chat_permissions <methods/set_chat_permissions>
   set_chat_photo <methods/set_chat_photo>
   set_chat_sticker_set <methods/set_chat_sticker_set>
   set_chat_title <methods/set_chat_title>
   set_game_score <methods/set_game_score>
   set_my_commands <methods/set_my_commands>
   set_passport_data_errors <methods/set_passport_data_errors>
   set_sticker_position_in_set <methods/set_sticker_position_in_set>
   set_sticker_set_thumb <methods/set_sticker_set_thumb>
   set_webhook <methods/set_webhook>
   stop_message_live_location <methods/stop_message_live_location>
   stop_poll <methods/stop_poll>
   unban_chat_member <methods/unban_chat_member>
   unpin_all_chat_messages <methods/unpin_all_chat_messages>
   unpin_chat_message <methods/unpin_chat_message>
   upload_sticker_file <methods/upload_sticker_file>
